--- a/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-line-items-grid-sales-channel/sw-order-line-items-grid-sales-channel.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-line-items-grid-sales-channel/sw-order-line-items-grid-sales-channel.scss
@@ -45,4 +45,9 @@ $sw-order-line-item-border: $color-gray-300;
     .sw-entity-single-select__selection-text .sw-product-variant-info {
         max-width: 280px;
     }
+
+    .icon--regular-chevron-down-xxs {
+        // @deprecated tag:v6.5.0 - The !important attribute can be removed
+        padding: 4px !important;
+    }
 }
