--- a/src/Administration/Resources/app/administration/src/module/sw-settings-custom-field/component/sw-custom-field-set-detail-base/sw-custom-field-detail-base.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-custom-field/component/sw-custom-field-set-detail-base/sw-custom-field-detail-base.html.twig
@@ -14,6 +14,9 @@
         :label="$tc(`sw-settings-custom-field.set.detail.labelTechnicalName`)"
         :help-text="$tc('sw-settings-custom-field.general.tooltipTechnicalName')"
         :disabled="!set._isNew || !acl.can('custom_field.editor')"
+        :error="technicalNameError"
+        required
+        @change="onTechnicalNameChange"
     />
     {% endblock %}
 
