--- a/src/Administration/Resources/app/administration/src/module/sw-settings-units/page/sw-settings-units-list/sw-settings-units.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-units/page/sw-settings-units-list/sw-settings-units.html.twig
@@ -1,7 +1,9 @@
+{# @deprecated tag:v6.5.0 - Block will be removed #}
 <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
 {% block sw_settings_units %}
 <sw-page class="sw-settings-units">
 
+    {# @deprecated tag:v6.5.0 - Block will be removed #}
     <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
     {% block sw_settings_units_search_bar %}
     <template slot="search-bar">
@@ -9,12 +11,15 @@
     </template>
     {% endblock %}
 
+    {# @deprecated tag:v6.5.0 - Block will be removed #}
     <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
     {% block sw_settings_units_smart_bar_header %}
     <template slot="smart-bar-header">
+        {# @deprecated tag:v6.5.0 - Block will be removed #}
         <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
         {% block sw_settings_units_smart_bar_header_title %}
         <h2>
+            {# @deprecated tag:v6.5.0 - Block will be removed #}
             <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
             {% block sw_settings_units_smart_bar_header_title_text %}
             {{ $tc('sw-settings.index.title') }}
@@ -29,9 +34,11 @@
     </template>
     {% endblock %}
 
+    {# @deprecated tag:v6.5.0 - Block will be removed #}
     <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
     {% block sw_settings_units_smart_bar_actions %}
     <template slot="smart-bar-actions">
+        {# @deprecated tag:v6.5.0 - Block will be removed #}
         <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
         {% block sw_settings_units_actions_save %}
         <sw-button
@@ -47,6 +54,7 @@
     </template>
     {% endblock %}
 
+    {# @deprecated tag:v6.5.0 - Block will be removed #}
     <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
     {% block sw_settings_units_language_switch %}
     <sw-language-switch
@@ -56,6 +64,7 @@
     />
     {% endblock %}
 
+    {# @deprecated tag:v6.5.0 - Block will be removed #}
     <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
     {% block sw_settings_units_content %}
     <sw-card-view slot="content">
@@ -63,6 +72,7 @@
             position-identifier="sw-settings-units-content"
             :class="{ 'sw-settings-units-card-empty': isEmpty }"
         >
+            {# @deprecated tag:v6.5.0 - Block will be removed #}
             <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
             {% block sw_settings_units_content_empty_state %}
             <sw-empty-state
@@ -74,6 +84,7 @@
             {% endblock %}
 
             <template #grid>
+                {# @deprecated tag:v6.5.0 - Block will be removed #}
                 <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
                 {% block sw_settings_units_content_grid %}
                 <sw-data-grid
@@ -90,10 +101,18 @@
                     @inline-edit-cancel="cancelUnit"
                 >
 
-                    <template
-                        slot="actions"
-                        slot-scope="{ item }"
-                    >
+                    <template #actions="{ item }">
+                        <sw-context-menu-item
+                            class="sw-settings-units__edit-action"
+                            :disabled="!acl.can('scale_unit.editor')"
+                            @click="editUnit(item)"
+                        >
+                            {{ $tc('global.default.edit') }}
+                        </sw-context-menu-item>
+
+                        <sw-context-menu-divider />
+
+                        {# @deprecated tag:v6.5.0 - Block will be removed #}
                         <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
                         {% block sw_settings_units_content_grid_column_menu_delete %}
                         <sw-context-menu-item
@@ -102,7 +121,7 @@
                             :disabled="!acl.can('scale_unit.deleter')"
                             @click="deleteUnit(item)"
                         >
-                            {{ $tc('sw-settings-units.grid.contextMenuDelete') }}
+                            {{ $tc('global.default.delete') }}
                         </sw-context-menu-item>
                         {% endblock %}
                     </template>
