NEXT-22635 - Remember filter setting

--- a/src/Administration/Resources/app/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-list/sw-settings-snippet-list.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-list/sw-settings-snippet-list.html.twig
@@ -4,7 +4,7 @@
 
     <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
     {% block sw_settings_snippet_set_list_search_bar %}
-    <template slot="search-bar">
+    <template #search-bar>
         <sw-search-bar
             initial-search-type="snippet"
             :placeholder="$tc('sw-settings-snippet.general.placeholderSearchBarSnippets')"
@@ -16,7 +16,7 @@
 
     <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
     {% block sw_settings_snippet_list_smart_bar_header %}
-    <template slot="smart-bar-header">
+    <template #smart-bar-header>
         <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
         {% block sw_settings_snippet_list_smart_bar_header_title %}
         <h2
@@ -43,7 +43,7 @@
 
     <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
     {% block sw_settings_snippet_list_smart_bar_actions %}
-    <template slot="smart-bar-actions">
+    <template #smart-bar-actions>
         <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
         {% block sw_settings_snippet_list_smart_bar_actions_add %}
         <sw-button
@@ -60,7 +60,7 @@
 
     <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
     {% block sw_settings_snippet_list_content %}
-    <template slot="content">
+    <template #content>
         <div class="sw-settings-snippet-list__content">
 
             <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
@@ -304,7 +304,7 @@
 
                 <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
                 {% block sw_settings_snippet_list_grid_pagination %}
-                <template slot="pagination">
+                <template #pagination>
                     <sw-pagination
                         :page="page"
                         :limit="limit"
@@ -321,13 +321,15 @@
         </div>
     </template>
 
-    <template slot="sidebar">
+    <template #sidebar>
         <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
         {% block sw_settings_snippet_list_grid_sidebar %}
         <sw-settings-snippet-sidebar
             class="sw-settings-snippet-list__grid-sidebar"
             :filter-items="filterItems"
             :author-filters="authorFilters"
+            :filter-settings="filterSettings"
+            @sidebar-reset-all="onResetAll"
             @change="onChange"
             @sw-sidebar-collaps-refresh-grid="getList"
             @sw-sidebar-close="onSidebarClose"
