--- a/src/Administration/Resources/app/administration/src/module/sw-settings-mailer/page/sw-settings-mailer/sw-settings-mailer.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-mailer/page/sw-settings-mailer/sw-settings-mailer.html.twig
@@ -131,6 +131,10 @@
                 {% block sw_settings_mailer_smtp_settings %}
                 <sw-settings-mailer-smtp
                     :mailer-settings="mailerSettings"
+                    :host-error="smtpHostError"
+                    :port-error="smtpPortError"
+                    @host-changed="resetSmtpHostError"
+                    @port-changed="resetSmtpPortError"
                 />
                 {% endblock %}
 
