--- a/src/Administration/Resources/app/administration/src/app/component/meteor/sw-meteor-navigation/sw-meteor-navigation.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/meteor/sw-meteor-navigation/sw-meteor-navigation.html.twig
@@ -7,7 +7,7 @@
     <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
     {% block sw_meteor_navigation_link %}
     <router-link
-        :to="{ name: parentRoute.name }"
+        :to="parentRoute"
         class="sw-meteor-navigation__link"
     >
         <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
@@ -21,7 +21,7 @@
 
         <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
         {% block sw_meteor_navigation_link_label %}
-        {{ parentRoute.label }}
+        {{ $tc('sw-meteor.navigation.backButton') }}
         {% endblock %}
     </router-link>
     {% endblock %}
