--- a/src/Administration/Resources/app/administration/src/app/component/meteor/sw-meteor-page/sw-meteor-page.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/meteor/sw-meteor-page/sw-meteor-page.html.twig
@@ -35,7 +35,7 @@
                     <slot name="smart-bar-back">
                         <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
                         {% block sw_meteor_page_navigation %}
-                        <sw-meteor-navigation />
+                        <sw-meteor-navigation :from-link="fromLink" />
                         {% endblock %}
                     </slot>
                 </div>
