NEXT-21677 - Add missing select indicators to rule builder condition

--- a/src/Administration/Resources/app/administration/src/app/component/rule/condition-type/sw-condition-line-item/sw-condition-line-item.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/rule/condition-type/sw-condition-line-item/sw-condition-line-item.html.twig
@@ -38,13 +38,14 @@
             </slot>
         </template>
 
-        <template #result-item="{ item, index, searchTerm, highlightSearchTerm }">
+        <template #result-item="{ item, index, searchTerm, highlightSearchTerm, isSelected }">
             <slot
                 name="result-item"
                 v-bind="{ item, index, searchTerm, highlightSearchTerm }"
             >
                 <li
                     is="sw-select-result"
+                    :selected="isSelected(item)"
                     v-bind="{ item, index, searchTerm, highlightSearchTerm }"
                 >
                     <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
