--- a/src/Administration/Resources/app/administration/src/module/sw-settings-number-range/page/sw-settings-number-range-detail/sw-settings-number-range-detail.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-number-range/page/sw-settings-number-range-detail/sw-settings-number-range-detail.html.twig
@@ -97,6 +97,7 @@
                         validation="required"
                         required
                         :disabled="!acl.can('number_ranges.editor')"
+                        :error="numberRangeNameError"
                     />
                     {% endblock %}
 
@@ -262,6 +263,7 @@
                         label-property="typeName"
                         :label="$tc('sw-settings-number-range.detail.labelType')"
                         :criteria="numberRange.type.global ? numberRangeTypeCriteriaGlobal : numberRangeTypeCriteria"
+                        :error="numberRangeTypeIdError"
                         @change="onChangeType"
                     />
                     {% endblock %}
@@ -273,7 +275,6 @@
                         class="sw-number-range-detail__select-type"
                         :label="$tc('sw-settings-number-range.detail.labelSalesChannel')"
                         :disabled="!numberRange.typeId || !acl.can('number_ranges.editor')"
-                        required
                         :value="selectedNumberRangeSalesChannels"
                         :options="salesChannels"
                         label-property="translated.name"
