adding home link to flyout menu

--- a/src/Storefront/Resources/app/storefront/src/scss/skin/shopware/layout/_navigation-offcanvas.scss
+++ b/src/Storefront/Resources/app/storefront/src/scss/skin/shopware/layout/_navigation-offcanvas.scss
@@ -40,3 +40,11 @@ Based on custom offcanvas component.
         font-weight: $font-weight-bold;
     }
 }
+
+.navigation-offcanvas-list .main-navigation-link {
+    color: $body-color;
+    &.active {
+        color: $primary;
+        font-weight: $font-weight-bold;
+    }
+}
