--- a/src/Administration/Resources/app/administration/src/app/component/form/sw-price-field/sw-price-field.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/form/sw-price-field/sw-price-field.scss
@@ -9,6 +9,7 @@ $sw-price-field-suffix-font-weight: 400;
     .price-field-grid {
         display: grid;
         grid-template-columns: 1fr 30px 1fr;
+        min-width: 120px;
     }
 
     .sw-price-field__lock {
