--- a/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-document-settings-credit-note-modal/sw-order-document-settings-credit-note-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-document-settings-credit-note-modal/sw-order-document-settings-credit-note-modal.html.twig
@@ -16,18 +16,18 @@
     <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
     {% block sw_order_document_settings_modal_form_document_select_invoice %}
     <sw-select-field
-        v-model="documentConfig.custom.invoiceNumber"
         class="sw-order-document-settings-credit-note-modal__invoice-select"
         required
         :label="$tc('sw-order.documentModal.labelInvoiceNumber')"
         :placeholder="$tc('sw-order.documentModal.selectInvoiceNumber')"
+        @change="onSelectInvoice"
     >
         <option
-            v-for="number in invoiceNumbers"
-            :key="number"
-            :value="number"
+            v-for="invoice in invoices"
+            :key="invoice.id"
+            :value="invoice.id"
         >
-            {{ number }}
+            {{ invoice.config.custom.invoiceNumber }}
         </option>
     </sw-select-field>
     {% endblock %}
@@ -59,18 +59,18 @@
 {% block sw_order_document_settings_modal_form_additional_content %}
 <sw-select-field
     v-if="!feature.isActive('FEATURE_NEXT_7530')"
-    v-model="documentConfig.custom.invoiceNumber"
     class="sw-order-document-settings-credit-note-modal__invoice-select"
     required
     :label="$tc('sw-order.documentModal.labelInvoiceNumber')"
     :placeholder="$tc('sw-order.documentModal.selectInvoiceNumber')"
+    @change="onSelectInvoice"
 >
     <option
-        v-for="number in invoiceNumbers"
-        :key="number"
-        :value="number"
+        v-for="invoice in invoices"
+        :key="invoice.id"
+        :value="invoice.id"
     >
-        {{ number }}
+        {{ invoice.config.custom.invoiceNumber }}
     </option>
 </sw-select-field>
 
@@ -94,6 +94,11 @@
     v-else
     class="sw-order-document-settings-credit-note-modal__no-items-text"
 >
-    {{ $tc('sw-order.documentModal.labelNoItems') }}
+    <sw-icon
+        size="20"
+        name="default-badge-warning"
+    />
+
+    <span>{{ $tc('sw-order.documentModal.labelNoItems') }}</span>
 </div>
 {% endblock %}
