--- a/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-document-settings-modal/sw-order-document-settings-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-document-settings-modal/sw-order-document-settings-modal.html.twig
@@ -124,7 +124,7 @@
         <sw-button
             class="sw-order-document-settings-modal__preview-button"
             size="small"
-            :disabled="isLoadingDocument"
+            :disabled="!documentPreconditionsFulfilled || isLoadingDocument"
             :is-loading="isLoadingPreview"
             @click="onPreview"
         >
