--- a/src/Administration/Resources/app/administration/src/app/component/utils/sw-inherit-wrapper/sw-inherit-wrapper.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/utils/sw-inherit-wrapper/sw-inherit-wrapper.scss
@@ -10,6 +10,10 @@
         color: $color-darkgray-200;
 
         label {
+            &.has--error {
+                color: $color-crimson-500;
+            }
+
             flex-grow: 1;
         }
 
