--- a/src/Administration/Resources/app/administration/src/module/sw-settings-language/page/sw-settings-language-detail/sw-settings-language-detail.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-language/page/sw-settings-language-detail/sw-settings-language-detail.html.twig
@@ -138,8 +138,9 @@
                             :inherited-value="parentTranslationCodeId"
                             :label="$tc('sw-settings-language.detail.labelIsoCode')"
                             :required="isIsoCodeRequired"
+                            :error="translationCodeError"
                         >
-                            <template #content="{ currentValue, updateCurrentValue, isInherited, isInheritField, toggleInheritance, restoreInheritance, removeInheritance }">
+                            <template #content="{ currentValue, updateCurrentValue, isInherited, isInheritField, toggleInheritance, restoreInheritance, removeInheritance, error }">
                                 <sw-entity-single-select
                                     id="iso-codes"
                                     :value="currentValue"
@@ -148,7 +149,7 @@
                                     label-property="code"
                                     show-clearable-button
                                     :placeholder="$tc('sw-settings-language.detail.placeholderPleaseSelect')"
-                                    :error="translationCodeError"
+                                    :error="error"
                                     entity="locale"
                                     @change="updateCurrentValue"
                                 >
