--- a/src/Administration/Resources/app/administration/src/module/sw-settings-rule/page/sw-settings-rule-detail/sw-settings-rule-detail.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-rule/page/sw-settings-rule-detail/sw-settings-rule-detail.html.twig
@@ -124,6 +124,7 @@
                     :class="'sw-settings-rule-detail__tab-item sw-settings-rule-detail__tab-item-' + tab.cssClassSuffix"
                     :route="tab.route"
                     :title="tab.title"
+                    :has-error="tabHasError(tab)"
                 >
                     {{ tab.title }}
                 </sw-tabs-item>
@@ -146,6 +147,8 @@
                 :condition-repository="conditionRepository"
                 :is-loading="isLoading"
                 :detail-page-loading="isLoading"
+                :rule-name-error="ruleNameError"
+                :rule-priority-error="rulePriorityError"
                 @conditions-changed="conditionsChanged"
                 @tree-finished-loading="setTreeFinishedLoading"
             />
