NEXT-22990 - Improve payment method error handling

--- a/src/Administration/Resources/app/administration/src/module/sw-settings-payment/page/sw-settings-payment-detail/sw-settings-payment-detail.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-payment/page/sw-settings-payment-detail/sw-settings-payment-detail.html.twig
@@ -97,6 +97,7 @@
                             :disabled="!acl.can('payment.editor')"
                             :label="$tc('sw-settings-payment.detail.labelName')"
                             :placeholder="placeholder(paymentMethod, 'name', $tc('sw-settings-payment.detail.placeholderName'))"
+                            :error="paymentMethodNameError"
                         />
                         {% endblock %}
 
