NEXT-22515 - Fix scrolling while dragging in payment sorting modal

--- a/src/Administration/Resources/app/administration/src/module/sw-settings-payment/component/sw-settings-payment-sorting-modal/sw-settings-payment-sorting-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-payment/component/sw-settings-payment-sorting-modal/sw-settings-payment-sorting-modal.html.twig
@@ -23,6 +23,8 @@
             <sw-sortable-list
                 class="sw-settings-payment-sorting-modal__payment-method-list"
                 :items="sortedPaymentMethods"
+                :scroll-on-drag="true"
+                :scroll-on-drag-conf="scrollOnDragConf"
                 @itemsSorted="onSort"
             >
                 <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
