--- a/src/Administration/Resources/app/administration/src/module/sw-customer/page/sw-customer-detail/sw-customer-detail.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-customer/page/sw-customer-detail/sw-customer-detail.html.twig
@@ -32,6 +32,16 @@
         </span>
         {% endblock %}
 
+        {% block sw_customer_detail_actions_storefront_customer_login %}
+            <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
+                <sw-button
+                    :disabled="isLoading"
+                    @click="onLoginAsCustomerButtonClick"
+                >
+                    {{ $tc('sw-customer.detail.buttonLoginAsCustomer') }}
+                </sw-button>
+        {% endblock %}
+
         <span v-else>
             <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
             {% block sw_customer_detail_actions_cancel %}
