NEXT-23419 - Fix overlapping CMS list item image

--- a/src/Administration/Resources/app/administration/src/module/sw-cms/page/sw-cms-list/sw-cms-list.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-cms/page/sw-cms-list/sw-cms-list.html.twig
@@ -255,15 +255,10 @@
                             {% endblock %}
 
                             <template v-else>
-                                <sw-skeleton variant="gallery" />
-                                <sw-skeleton variant="gallery" />
-                                <sw-skeleton variant="gallery" />
-                                <sw-skeleton variant="gallery" />
-                                <sw-skeleton variant="gallery" />
-                                <sw-skeleton variant="gallery" />
-                                <sw-skeleton variant="gallery" />
-                                <sw-skeleton variant="gallery" />
-                                <sw-skeleton variant="gallery" />
+                                <sw-skeleton
+                                    v-for="index in 9"
+                                    :key="`cms-list-skeleton-${index}`"
+                                    variant="gallery" />
                             </template>
                         </div>
                         {% endblock %}
