[NEXT-8593] feat: add modal with ability to select the sales channel and perform the login

--- a/src/Administration/Resources/app/administration/src/module/sw-customer/page/sw-customer-detail/sw-customer-detail.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-customer/page/sw-customer-detail/sw-customer-detail.html.twig
@@ -32,11 +32,19 @@
         </span>
         {% endblock %}
 
+        {% block sw_customer_login_as_customer_modal %}
+        <sw-customer-login-as-customer-modal
+            v-if="showLoginAsCustomerModal"
+            @modal-close="onClickButtonCloseLoginAsCustomerModal"
+            :customer="customer"
+        />
+        {% endblock %}
+
         {% block sw_customer_detail_actions_storefront_customer_login %}
             <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
                 <sw-button
                     :disabled="isLoading"
-                    @click="onLoginAsCustomerButtonClick"
+                    @click="onClickButtonShowLoginAsCustomerModal"
                 >
                     {{ $tc('sw-customer.detail.buttonLoginAsCustomer') }}
                 </sw-button>
