NEXT-22733 - Fix padding of icons in payment method sorting modal

--- a/src/Administration/Resources/app/administration/src/module/sw-settings-payment/component/sw-settings-payment-sorting-modal/sw-settings-payment-sorting-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-payment/component/sw-settings-payment-sorting-modal/sw-settings-payment-sorting-modal.html.twig
@@ -37,6 +37,7 @@
                         <sw-icon
                             class="sw-settings-payment-sorting-modal__payment-method-list-item__action"
                             name="default-action-drag-horizontal"
+                            :class="feature.isActive('v6.5.0.0') ? '' : 'legacy'"
                         />
                         {% endblock %}
                         <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
