--- a/src/Administration/Resources/app/administration/src/module/sw-settings-payment/component/sw-settings-payment-sorting-modal/sw-settings-payment-sorting-modal.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-payment/component/sw-settings-payment-sorting-modal/sw-settings-payment-sorting-modal.scss
@@ -41,6 +41,14 @@
             height: 24px;
         }
 
+        &__action {
+            padding: 4px;
+
+            &.legacy {
+                padding: 0;
+            }
+        }
+
         .sw-icon {
             width: 16px;
             margin-right: 4px;
