--- a/src/Core/Framework/Resources/views/documents/includes/letter_header.html.twig
+++ b/src/Core/Framework/Resources/views/documents/includes/letter_header.html.twig
@@ -24,7 +24,7 @@ All blocks of this template are available in the template which renders this tem
                 {% if customer.customer.vatIds and billingAddress.country.companyTax.getEnabled and config.displayAdditionalNoteDelivery and billingAddress.country.id in config.deliveryCountries %}
                     {{ 'document.vatId'|trans({'%vatId%': customer.customer.vatIds|first})|sw_sanitize }}<br>
                 {% endif %}
-                {% if not notSpecified and billingAddress.salutation and billingAddress.salutation.id is not same as(constant('Shopware\\Core\\Defaults::SALUTATION')) %}{{ billingAddress.salutation.displayName ~ ' ' }}{% endif %}{{ billingAddress.firstName }} {{ billingAddress.lastName }}<br>
+                {% if config.displaySalutationInPostalAddress and not notSpecified and billingAddress.salutation and billingAddress.salutation.id is not same as(constant('Shopware\\Core\\Defaults::SALUTATION')) %}{{ billingAddress.salutation.displayName ~ ' ' }}{% endif %}{{ billingAddress.firstName }} {{ billingAddress.lastName }}<br>
                 {{ billingAddress.street }}<br>
                 {% if billingAddress.additionalAddressLine1 %}
                     {{ billingAddress.additionalAddressLine1 }}<br>
