Fix readability of sw-text-editor on zebra pattern in bulk edit

--- a/src/Administration/Resources/app/administration/src/app/component/form/sw-text-editor/sw-text-editor.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/form/sw-text-editor/sw-text-editor.scss
@@ -115,6 +115,7 @@
     }
 
     .sw-text-editor__content {
+        background: $color-white;
         transition: 0.3s all ease;
         position: relative;
         display: flex;
