--- a/src/Administration/Resources/app/administration/src/module/sw-extension/component/sw-extension-card-base/sw-extension-card-base.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-extension/component/sw-extension-card-base/sw-extension-card-base.scss
@@ -42,7 +42,7 @@
     .sw-meteor-card__content .sw-meteor-card__content-wrapper {
         display: grid;
         grid-column-gap: 32px;
-        grid-template-columns: 26px 60px 4fr 2fr minmax(min-content, 1fr) auto;
+        grid-template-columns: 20px 26px 60px 4fr 2fr minmax(min-content, 1fr) auto;
         align-items: center;
         padding: 10px 32px;
         border: none;
