--- a/src/Administration/Resources/app/administration/src/module/sw-cms/elements/image/component/sw-cms-el-image.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-cms/elements/image/component/sw-cms-el-image.scss
@@ -1,34 +1,42 @@
 @import "~scss/variables";
 
-.sw-cms-el-image {
+.sw-cms-el-image-wrapper {
     display: flex;
-    max-width: 100%;
+    width: 100%;
+    &-center {
+        justify-content: center;
+    }
 
-    img {
-        display: block;
+    .sw-cms-el-image {
+        display: flex;
         max-width: 100%;
-    }
-
-    &.is--cover {
-        height: 100%;
-        width: 100%;
-        position: relative;
 
         img {
-            object-fit: cover;
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
+            display: block;
+            max-width: 100%;
         }
-    }
 
-    &.is--stretch {
-        img {
+        &.is--cover {
+            height: 100%;
             width: 100%;
+            position: relative;
+
+            img {
+                object-fit: cover;
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+            }
+        }
+
+        &.is--stretch {
+            img {
+                width: 100%;
+            }
         }
     }
 }
