--- a/src/Storefront/Resources/views/storefront/element/cms-element-image.html.twig
+++ b/src/Storefront/Resources/views/storefront/element/cms-element-image.html.twig
@@ -1,7 +1,7 @@
 {% block element_image %}
     {% set config = element.fieldConfig.elements %}
 
-    <div class="cms-element-{{ element.type }}{% if config.verticalAlign.value %} has-vertical-alignment{% endif %}">
+    <div class="cms-element-{{ element.type }}{% if config.verticalAlign.value || config.horizontalAlign.value %} has-vertical-alignment {% endif %}{% if config.horizontalAlign.value == "center" %} cms-element-image-horizontal-center {% elseif config.horizontalAlign.value == "flex-end" %} cms-element-image-horizontal-right {% else %} cms-element-image-horizontal-left {% endif %}">
         {% block element_product_slider_alignment %}
             {% if config.verticalAlign.value %}
                 <div class="cms-element-alignment{% if config.verticalAlign.value == "center" %} align-self-center{% elseif config.verticalAlign.value == "flex-end" %} align-self-end{% else %} align-self-start{% endif %}">
