Add button to select all permissions for an entity

--- a/src/Administration/Resources/app/administration/src/module/sw-users-permissions/components/sw-users-permissions-detailed-permissions-grid/sw-users-permissions-detailed-permissions-grid.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-users-permissions/components/sw-users-permissions-detailed-permissions-grid/sw-users-permissions-detailed-permissions-grid.html.twig
@@ -27,6 +27,14 @@
                 {% endblock %}
             </div>
             {% endblock %}
+
+            <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
+            {% block sw_users_permissions_detailed_permissions_grid_header_roles_select_all %}
+            <div class="sw-users-permissions-detailed-permissions-grid__checkbox-wrapper">
+                <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
+                {{ $tc('global.entities.all') }}
+            </div>
+            {% endblock %}
         </div>
         {% endblock %}
 
@@ -96,6 +104,20 @@
                         </div>
                     </div>
                 </div>
+                {% endblock %}
+            </div>
+            {% endblock %}
+
+            <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
+            {% block sw_users_permissions_detailed_permissions_grid_permissions_roles_select_all %}
+            <div class="sw-users-permissions-detailed-permissions-grid__checkbox-wrapper">
+                {% block sw_users_permissions_detailed_permissions_grid_permissions_roles_select_all_button %}
+                <sw-button
+                    size="x-small"
+                    @click="enablePermissionsForEntity(entity)"
+                >
+                    {{ $tc('global.entities.all') }}
+                </sw-button>
                 {% endblock %}
             </div>
             {% endblock %}
