--- a/src/Administration/Resources/app/administration/src/module/sw-users-permissions/components/sw-users-permissions-detailed-permissions-grid/sw-users-permissions-detailed-permissions-grid.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-users-permissions/components/sw-users-permissions-detailed-permissions-grid/sw-users-permissions-detailed-permissions-grid.scss
@@ -15,6 +15,11 @@
         justify-content: flex-end;
         border-bottom: 1px solid $color-gray-300;
         padding-left: 20px;
+        background: $color-white;
+
+        &:nth-child(even) {
+            background: $color-gray-100;
+        }
 
         &:last-child {
             border-bottom: none;
