[NEXT-8593] add login as customer route with moved logic

--- a/src/Administration/Resources/app/administration/src/module/sw-customer/component/sw-customer-login-as-customer-modal/sw-customer-login-as-customer-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-customer/component/sw-customer-login-as-customer-modal/sw-customer-login-as-customer-modal.html.twig
@@ -19,7 +19,7 @@
                 icon="default-action-external"
                 target="_blank"
                 :key="salesChannelDomain.id"
-                @click="onSalesChannelDomainMenuItemClick(salesChannelDomain.salesChannelId)">
+                @click="onSalesChannelDomainMenuItemClick(salesChannelDomain.salesChannelId, salesChannelDomain.url)">
                 {{ salesChannelDomain.url }}
             </sw-context-menu-item>
         {% endblock %}
