--- a/src/Storefront/Resources/app/storefront/src/scss/component/_gallery-slider.scss
+++ b/src/Storefront/Resources/app/storefront/src/scss/component/_gallery-slider.scss
@@ -34,6 +34,12 @@ based on "base-slider" component and "tiny-slider" (https://github.com/ganlanyua
     position: relative;
     height: 100%;
 
+    .arrows-outside {
+        .gallery-slider-item  {
+            padding: 0 25px;
+        }
+    }
+
     .gallery-slider-image {
         display: block;
     }
@@ -89,7 +95,7 @@ based on "base-slider" component and "tiny-slider" (https://github.com/ganlanyua
     left: 0;
 
     &.is-nav-prev-outside {
-        left: -10px;
+        left: 0;
     }
 }
 
@@ -97,7 +103,7 @@ based on "base-slider" component and "tiny-slider" (https://github.com/ganlanyua
     right: 0;
 
     &.is-nav-next-outside {
-        right: -10px;
+        right: 0;
     }
 }
 
