--- a/src/Storefront/Resources/views/storefront/element/cms-element-image-gallery.html.twig
+++ b/src/Storefront/Resources/views/storefront/element/cms-element-image-gallery.html.twig
@@ -145,7 +145,7 @@
                                                         {% block element_image_gallery_inner_items %}
                                                             {% for image in mediaItems %}
                                                                 {% block element_image_gallery_inner_item %}
-                                                                    <div class="gallery-slider-item-container">
+                                                                    <div class="gallery-slider-item-container{% if sliderConfig.navigationArrows.value == "outside" %} arrows-outside {% endif %}">
                                                                         <div class="gallery-slider-item is-{{ displayMode }} js-magnifier-container"{% if minHeight and  (displayMode == "cover" or displayMode == "contain" ) %} style="min-height: {{ minHeight }}"{% endif %}>
                                                                             {% set attributes = {
                                                                                 'class': 'img-fluid gallery-slider-image magnifier-image js-magnifier-image',
