--- a/src/Storefront/Resources/views/storefront/element/cms-element-image-slider.html.twig
+++ b/src/Storefront/Resources/views/storefront/element/cms-element-image-slider.html.twig
@@ -47,7 +47,7 @@
                                 {% endset %}
 
                                 {% block element_image_slider_inner_item %}
-                                    <div class="image-slider-item-container">
+                                    <div class="image-slider-item-container{% if sliderConfig.navigationArrows.value == "outside" %} arrows-outside {% endif %}">
                                         {% if image.url %}
                                             <a href="{{ image.url }}"
                                                class="image-slider-link"
