--- a/src/Administration/Resources/app/administration/src/app/component/base/sw-alert/sw-alert.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/base/sw-alert/sw-alert.html.twig
@@ -63,8 +63,8 @@
     <button
         v-if="closable"
         class="sw-alert__close"
-        aria-label="Schließen"
-        title="Schließen"
+        :aria-label="$tc('global.default.close')"
+        :title="$tc('global.default.close')"
         @click.prevent="$emit('close', notificationIndex)"
     >
         <sw-icon
