fixed styling for image slider if display mode is cover

--- a/src/Storefront/Resources/app/storefront/src/scss/component/_gallery-slider.scss
+++ b/src/Storefront/Resources/app/storefront/src/scss/component/_gallery-slider.scss
@@ -35,7 +35,7 @@ based on "base-slider" component and "tiny-slider" (https://github.com/ganlanyua
     height: 100%;
 
     .arrows-outside {
-        .gallery-slider-item  {
+        .gallery-slider-item-wrapper {
             padding: 0 25px;
         }
     }
