--- a/src/Storefront/Resources/app/storefront/src/scss/component/_image-slider.scss
+++ b/src/Storefront/Resources/app/storefront/src/scss/component/_image-slider.scss
@@ -15,7 +15,7 @@ based on "base-slider" component and "tiny-slider" (https://github.com/ganlanyua
         width: 100%;
     }
     .arrows-outside {
-        .image-slider-item  {
+        .image-slider-item-wrapper  {
             padding: 0 25px;
         }
     }
