--- a/src/Storefront/Resources/views/storefront/element/cms-element-image-gallery.html.twig
+++ b/src/Storefront/Resources/views/storefront/element/cms-element-image-gallery.html.twig
@@ -146,6 +146,7 @@
                                                             {% for image in mediaItems %}
                                                                 {% block element_image_gallery_inner_item %}
                                                                     <div class="gallery-slider-item-container{% if sliderConfig.navigationArrows.value == "outside" %} arrows-outside {% endif %}">
+                                                                    <div class="gallery-slider-item-wrapper">
                                                                         <div class="gallery-slider-item is-{{ displayMode }} js-magnifier-container"{% if minHeight and  (displayMode == "cover" or displayMode == "contain" ) %} style="min-height: {{ minHeight }}"{% endif %}>
                                                                             {% set attributes = {
                                                                                 'class': 'img-fluid gallery-slider-image magnifier-image js-magnifier-image',
@@ -165,6 +166,7 @@
                                                                             {% sw_thumbnails 'gallery-slider-image-thumbnails' with {
                                                                                 media: image
                                                                             } %}
+                                                                        </div>
                                                                         </div>
                                                                     </div>
                                                                 {% endblock %}
