--- a/src/Administration/Resources/app/administration/src/module/sw-settings-country/component/sw-settings-country-address-handling/sw-settings-country-address-handling.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-country/component/sw-settings-country-address-handling/sw-settings-country-address-handling.html.twig
@@ -64,8 +64,8 @@
                     v-draggable="{ ...dragConf, data: { snippet, index }}"
                     :value="snippet"
                     :line-position="index"
-                    :disabled="isDisabled"
                     :get-label-property="getLabelProperty"
+                    :total-lines="addressFormat.length"
                     @change="change"
                     @drag-end="onDragEnd"
                     @location-move="moveToLocation"
